--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -175,3 +175,82 @@ footer p{
 	text-align: center;
 	padding: 10px;
 }
+
+/*Page envento*/
+
+#image-container,
+#info-container{
+	margin-top: 30px;
+}
+
+#image-container img{
+	border-radius: 10px;
+	height: 270px;
+}
+
+#info-container{
+	font-size: 36pt;
+	font-weight: 900;
+}
+
+#info-container p{
+	margin: 0;
+	font-size: 14px;
+	display: flex;
+}
+
+#info-container h3,
+#description-container h3{
+	font-size: 20px;
+	font-weight: bold;
+
+}
+
+#info-container ion-icon{
+	font-size: 20px;
+	color:#F2A340;
+	margin-right: 5px;
+}
+
+#info-container #event-submit{
+	margin: 20px 0;
+}
+
+#items-list{
+	list-style: none;
+	padding-left: 0;
+	font-size: 14pt;
+}
+
+#items-list li{
+	display: flex;
+}
+
+
+
+.dasboard-title-container{
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
+.dashboard-events-container th{
+	width: 25%;
+}
+
+.dashboard-events-container form{
+ display: inline-block;
+}
+
+.image-preview{
+	width: 100px;
+	height: 20px;
+}
+
+#info-container .already-joined-msg{
+	margin: 15px 0;
+	color: 004085;
+	background-color: #CCE5FF;
+	border: 1px solid #B8DAFF;
+	padding: 10px;
+	width: 275px;
+}
